[#LIB-90] Make XML representation of BulkData references compliant to WADO-RS